--- a/a/sass/modules/about.sass
+++ b/a/sass/modules/about.sass
@@ -125,7 +125,7 @@
       background-color: rgba(255,255,255,0.1)
       outline: none
     +breakpoint(min-width $medium-width)
-      +rem(margin-top, -5px)
+      margin-top: 0
 
 .subscribe-follow-link .fa
   +rem(margin-left, -2px)
